# ThreeCPP

./: .gitignore  CMakeLists.txt  PHASE1_COMPLETE.md  README.md
examples/: CMakeLists.txt  cube_rotation.cpp  hello_triangle.cpp
include/threecpp/: ambient_light.h  camera.h  color.h  directional_light.h  euler.h  geometry.h  graphics_device.h  light.h  material.h  matrix4.h  mesh.h  mesh_basic_material.h  mesh_phong_material.h  object3d.h  orthographic_camera.h  perspective_camera.h  quaternion.h  renderer.h  scene.h  texture.h  threecpp.h  vector2.h  vector3.h  vector4.h
src/camera/: CMakeLists.txt  camera.cpp
src/core/: CMakeLists.txt  config.h.in  object3d.cpp
src/core/math/: color.cpp  euler.cpp  matrix4.cpp  quaternion.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/geometry/: CMakeLists.txt  geometry.cpp
src/graphics/: CMakeLists.txt
src/graphics/directx/: CMakeLists.txt
src/graphics/opengl/: CMakeLists.txt  gl_device.cpp
src/graphics/vulkan/: CMakeLists.txt
src/light/: CMakeLists.txt  light.cpp
src/material/: CMakeLists.txt  material.cpp
src/mesh/: CMakeLists.txt  mesh.cpp
src/renderer/: CMakeLists.txt  renderer.cpp
src/scene/: CMakeLists.txt  scene.cpp
src/texture/: CMakeLists.txt  texture.cpp
src/window/: CMakeLists.txt  window.cpp
src/window/linux/: x11_window.cpp
src/window/macos/: cocoa_window.cpp
src/window/windows/: win_window.cpp
tests/: CMakeLists.txt  math_test.cpp  scene_test.cpp
